# mon-equipe-3090

./: README.md  commande_agent.jsx  production.py  production_perfect.py  production_vfx.py  pyproject.toml  test_force.py  vfx_analyst.py
src/mon_equipe_3090/: crew.py  main.py
src/mon_equipe_3090/config/: agents.yaml  tasks.yaml
