[project]
name = "mon_equipe_3090"
version = "0.1.0"
description = "Système d'agents pour le portfolio 3d de Hensen"
authors = [{ name = "Hensen Martial", email = "votre@email.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.35.0",
    "langchain-openai>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"